crates/rhdl/tests/roll_your_own_any_fails.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
     ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:198:17]
 197 │         let h = h.val();
 198 │         let j = h.any();
     ·                 ───┬───
     ·                    ╰── RHDL does not support the use of unary operators on this type
 199 │         signal(j)
     ╰────
  help: You cannot roll your own | operator in RHDL.  You should write a kernel and call it as a regular function.
